# Auto-SignIn

./: .env.example  .gitignore  BENCHMARK_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  SECURITY.md  auto_distribute.ps1  auto_distribute.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  platform_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: auto_distribute.yml  ci.yml  deploy.yml  docker.yml  release.yml  signin.yml  validate.yml
.trae/skills/996-agent/: SKILL.md
autosignin/: __init__.py  cli.py  web_ui.py
autosignin/core/: page_analyzer.py  recovery.py  storage.py
autosignin/utils/: anti_crawler.py  cookie_extractor.py
config/: config.yaml  config.yaml.example
docker/: Dockerfile
docs/: ARCHITECTURE_EVOLUTION.md  COOKIE_GUIDE.md  INFINITE_INVOLUTION.md  OPEN_SOURCE_VIRAL_GUIDE.md  OPTIMIZATION_SUMMARY.md  QUICK_START.md  README.md  netease_cookie_tutorial.md  next_steps.md
src/cli/: main.py
src/core/: config.py  database.py  engine.py  notifier.py
src/utils/: logger.py  netease_crypto.py
src/web/: app.py
tests/: test_config.py  test_platforms.py
