[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "996-agent"
version = "1.0.0"
description = "The Involution Engine - AI works 996, so you don't have to."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "996 Agent Team"}
]
keywords = ["996", "involution", "ai-skill", "agent", "competition"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=4.1.0",
]

[project.urls]
Homepage = "https://github.com/badhope/996-Skill"
Repository = "https://github.com/badhope/996-Skill"
Issues = "https://github.com/badhope/996-Skill/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
